# unt

./: CMakeLists.txt  README.md
include/: unt.h
include/unt/: std.h  sys.h
include/unt/sys/: info.h
src/: sys.c
src/sys/: info.c
test/: sys.c  sys_info.c
